--- a/public/404.html
+++ b/public/404.html
@@ -84,8 +84,8 @@
   
 
   
-  <link rel="alternate" href="https://nicks.netlify.com/index.xml" type="application/rss+xml" title="Academic">
-  <link rel="feed" href="https://nicks.netlify.com/index.xml" type="application/rss+xml" title="Academic">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Academic">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Academic">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -106,7 +106,7 @@
   <meta property="og:site_name" content="Academic">
   <meta property="og:url" content="">
   <meta property="og:title" content="404 Page not found | Academic">
-  <meta property="og:description" content="Professor of Artificial Intelligence"><meta property="og:image" content="https://nicks.netlify.com/img/portrait.jpg">
+  <meta property="og:description" content="Professor of Artificial Intelligence"><meta property="og:image" content="/img/portrait.jpg">
   <meta property="og:locale" content="en-us">
   
   
@@ -366,6 +366,10 @@
 </div>
 <div class="container">
   <footer class="site-footer">
+  
+  <p class="powered-by">
+    <a href="/privacy/">Privacy Policy</a>
+  </p>
   
 
   <p class="powered-by">
